src/libdrakvuf/libdrakvuf.h

typedef enum lookup_type
{
    __INVALID_LOOKUP_TYPE,
    LOOKUP_NONE,
    LOOKUP_DTB,
    LOOKUP_PID,
    LOOKUP_NAME,
    LOOKUP_KERNEL,
} lookup_type_t;
typedef enum addr_type
{
    __INVALID_ADDR_TYPE,
    ADDR_RVA,
    ADDR_VA,
    ADDR_PA,
    ADDR_SYMBOL,
} addr_type_t;
typedef enum trap_type
{
    __INVALID_TRAP_TYPE,
    BREAKPOINT,
    MEMACCESS,
    REGISTER,
    DEBUG,
    CPUID,
    IO,
    CATCHALL_BREAKPOINT
} trap_type_t;
typedef enum memaccess_type
{
    __INVALID_MEMACCESS_TYPE,
    PRE,
    POST
} memaccess_type_t;
typedef enum proc_type
{
    PROC_TYPE_UNKNOWN = 0,
    PROC_TYPE_32      = 32,
    PROC_TYPE_64      = 64,
} proc_type_t;
typedef struct process_data
{
    const char* name;   /* Process name */
    vmi_pid_t pid ;     /* Process pid */
    vmi_pid_t ppid ;    /* Process parent pid */
    addr_t base_addr ;  /* Process base address */
    int64_t userid ;    /* Process SessionID/UID */
    uint32_t tid ;      /* Thread Id for Linux & Windows*/
    proc_type_t bitness;/* Process bitness 32/64 */
} proc_data_t ;
typedef struct drakvuf* drakvuf_t;
struct drakvuf_trap;
typedef struct drakvuf_trap drakvuf_trap_t;
typedef struct drakvuf_trap_info
{
    gint64 timestamp;
    unsigned int vcpu;
    uint16_t altp2m_idx;
    proc_data_t proc_data ; /* Current owning process data */
    proc_data_t attached_proc_data ; /* Current attached process data */
    addr_t trap_pa;
    x86_registers_t* regs;
    drakvuf_trap_t* trap;
    uint64_t event_uid; /* Unique sequential event identifier */
    union
    {
        const cpuid_event_t* cpuid; /* For CPUID traps */
        const debug_event_t* debug; /* For DEBUG traps */
        const reg_event_t*   reg;   /* For MSR traps */
        const io_event_t*    io;    /* For I/O traps */
    };
} drakvuf_trap_info_t;
struct drakvuf_trap
{
    trap_type_t type;
    event_response_t (*cb)(drakvuf_t, drakvuf_trap_info_t*);
    // Force 'drakvuf_is_active_callback' check bo be true.
    // This allows to forcefully execute callback for 'bsodmon' and detect
    // injections faults.
    bool cb_force;
    void* data;

    union
    {
        const char* name; // Only used for informational/debugging purposes
        void* _name;
    };

    union
    {
        struct
        {
            lookup_type_t lookup_type;
            union
            {
                vmi_pid_t pid;
                const char* proc;
                addr_t dtb;
            };

            /* If specified and RVA is used
               RVA will be calculated from the base
               of this module */
            const char* module;

            addr_type_t addr_type;
            union
            {
                addr_t rva;
                addr_t addr;
                const char* symbol;
            };
        } breakpoint;

        struct
        {
            addr_t gfn;
            vmi_mem_access_t access;
            memaccess_type_t type;
        } memaccess;

        struct
        {
            register_t type;
            uint32_t msr;
        } regaccess;
    };

    // How many times trap can be hit in TRAP_TTL_RESET_INTERVAL_SEC interval,
    // before it gets discarded. Protects against api-hammering.
    // 0 for infinity.
    uint64_t ttl;
    time_t last_ttl_rst;
    // Callback invoked when the trap hits api-hammering limit. If not set (NULL),
    // the trap will be simply unhooked (not deleted).
    void(*ah_cb)(drakvuf_t, drakvuf_trap_t*);
};
////////////////////////////////////////////////////////////////////////////

// IMHO these definitions must be placed within another file, named
// libdrakvuf-windows.h or something similar

// For get_previous_mode...
typedef enum privilege_mode
{
    KERNEL_MODE,
    USER_MODE,
    MAXIMUM_MODE
} privilege_mode_t ;
// Confirmed only on Win7 SP1...
typedef enum object_manager_object
{
    OBJ_MANAGER_PROCESS_OBJECT = 7,
    OBJ_MANAGER_THREAD_OBJECT  = 8
} object_manager_object_t ;
////////////////////////////////////////////////////////////////////////////

vmi_instance_t drakvuf_lock_and_get_vmi(drakvuf_t drakvuf) NOEXCEPT;
void drakvuf_release_vmi(drakvuf_t drakvuf) NOEXCEPT;
////////////////////////////////////////////////////////////////////////////

/*---------------------------------------------------------
 * Reading in Rekall profile informations
 */

typedef struct symbol
{
    char* name;
    addr_t rva;
    uint8_t type;
    int inputs;
} __attribute__ ((packed)) symbol_t;
typedef struct symbols
{
    const char* name;
    symbol_t* symbols; // array of size count
    uint64_t count;
} symbols_t;
const char* drakvuf_get_json_wow_path(drakvuf_t drakvuf) NOEXCEPT;
json_object* drakvuf_get_json_wow(drakvuf_t drakvuf) NOEXCEPT;
symbols_t* json_get_symbols(json_object* json_profile) NOEXCEPT;
void drakvuf_free_symbols(symbols_t* symbols) NOEXCEPT;
bool drakvuf_get_kernel_symbol_rva(drakvuf_t drakvuf,
    const char* function,
    addr_t* rva) NOEXCEPT;
bool drakvuf_get_kernel_struct_size(drakvuf_t drakvuf,
    const char* struct_name,
    size_t* size) NOEXCEPT;
bool drakvuf_get_kernel_struct_member_rva(drakvuf_t drakvuf,
    const char* struct_name,
    const char* symbol,
    addr_t* rva) NOEXCEPT;
bool drakvuf_get_bitfield_offset_and_size(drakvuf_t drakvuf,
    const char* struct_name,
    const char* struct_member,
    addr_t* offset,
    size_t* start_bit,
    size_t* end_bit) NOEXCEPT;
bool json_get_symbol_rva(drakvuf_t drakvuf,
    json_object* json,
    const char* function,
    addr_t* rva) NOEXCEPT;
bool json_get_struct_size(drakvuf_t drakvuf,
    json_object* json,
    const char* struct_name,
    size_t* size) NOEXCEPT;
bool json_get_struct_member_rva(drakvuf_t drakvuf,
    json_object* json,
    const char* struct_name,
    const char* symbol,
    addr_t* rva) NOEXCEPT;
bool json_get_struct_members_array_rva(
    drakvuf_t drakvuf,
    json_object* json_profile,
    const char* struct_name_subsymbol_array[][2],
    size_t array_size,
    addr_t* rva) NOEXCEPT;
//---- end of paired drakvuf_* and json_* functions ----

typedef void (*drakvuf_trap_free_t)(drakvuf_trap_t* trap);
typedef void (*event_cb_t) (int fd, void* data);
bool drakvuf_init (drakvuf_t* drakvuf,
    const char* domain,
    const char* json_profile,
    const char* json_wow_profile,
    const bool libvmi_conf,
    const addr_t kpgd,
    const bool fast_singlestep,
    uint64_t limited_traps_ttl,
    GSList* ignored_processes,
    bool get_userid,
    bool enable_active_callback_check) NOEXCEPT;
void drakvuf_close (drakvuf_t drakvuf, const bool pause) NOEXCEPT;
bool drakvuf_add_trap(drakvuf_t drakvuf,
    drakvuf_trap_t* trap) NOEXCEPT;
void drakvuf_remove_trap (drakvuf_t drakvuf,
    drakvuf_trap_t* trap,
    drakvuf_trap_free_t free_routine) NOEXCEPT;
void drakvuf_loop (drakvuf_t drakvuf, bool (*is_interrupted)(drakvuf_t, void*), void* data) NOEXCEPT;
void drakvuf_interrupt (drakvuf_t drakvuf,
    int sig) NOEXCEPT;
int drakvuf_is_interrupted(drakvuf_t drakvuf) NOEXCEPT;
bool drakvuf_pause (drakvuf_t drakvuf) NOEXCEPT;
bool drakvuf_resume (drakvuf_t drakvuf) NOEXCEPT;