src/librepl/libdrakvuf.py


struct_drakvuf_trap_info.__slots__ = [
    'timestamp',
    'vcpu',
    'altp2m_idx',
    'proc_data',
    'attached_proc_data',
    'trap_pa',
    'regs',
    'trap',
    'unnamed_1',
]
struct_drakvuf_trap_info._anonymous_ = [
    'unnamed_1',
]
struct_drakvuf_trap_info._fields_ = [
    ('timestamp', gint64),
    ('vcpu', c_uint),
    ('altp2m_idx', c_uint16),
    ('proc_data', proc_data_t),
    ('attached_proc_data', proc_data_t),
    ('trap_pa', addr_t),
    ('regs', POINTER(x86_registers_t)),
    ('trap', POINTER(drakvuf_trap_t)),
    ('unnamed_1', union_anon_159),
]

drakvuf_trap_info_t = struct_drakvuf_trap_info# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 200

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 208
class union_anon_160(Union):
    pass

union_anon_160.__slots__ = [
    'name',
    '_name',
]
union_anon_160._fields_ = [
    ('name', String),
    ('_name', POINTER(None)),
]

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 219
class union_anon_161(Union):
    pass

union_anon_161.__slots__ = [
    'pid',
    'proc',
    'dtb',
]
union_anon_161._fields_ = [
    ('pid', vmi_pid_t),
    ('proc', String),
    ('dtb', addr_t),
]

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 232
class union_anon_162(Union):
    pass

union_anon_162.__slots__ = [
    'rva',
    'addr',
]
union_anon_162._fields_ = [
    ('rva', addr_t),
    ('addr', addr_t),
]

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 216
class struct_anon_163(Structure):
    pass

struct_anon_163.__slots__ = [
    'lookup_type',
    'unnamed_1',
    'module',
    'addr_type',
    'unnamed_2',
]
struct_anon_163._anonymous_ = [
    'unnamed_1',
    'unnamed_2',
]
struct_anon_163._fields_ = [
    ('lookup_type', lookup_type_t),
    ('unnamed_1', union_anon_161),
    ('module', String),
    ('addr_type', addr_type_t),
    ('unnamed_2', union_anon_162),
]

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 239
class struct_anon_164(Structure):
    pass

struct_anon_164.__slots__ = [
    'gfn',
    'access',
    'type',
]
struct_anon_164._fields_ = [
    ('gfn', addr_t),
    ('access', vmi_mem_access_t),
    ('type', memaccess_type_t),
]

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 214
class union_anon_165(Union):
    pass

union_anon_165.__slots__ = [
    'breakpoint',
    'memaccess',
    'reg',
]
union_anon_165._fields_ = [
    ('breakpoint', struct_anon_163),
    ('memaccess', struct_anon_164),
    ('reg', register_t),
]

struct_drakvuf_trap.__slots__ = [
    'type',
    'cb',
    'data',
    'unnamed_1',
    'unnamed_2',
]
struct_drakvuf_trap._anonymous_ = [
    'unnamed_1',
    'unnamed_2',
]
struct_drakvuf_trap._fields_ = [
    ('type', trap_type_t),
    ('cb', CFUNCTYPE(UNCHECKED(event_response_t), drakvuf_t, POINTER(drakvuf_trap_info_t))),
    ('data', POINTER(None)),
    ('unnamed_1', union_anon_160),
    ('unnamed_2', union_anon_165),
]

enum_privilege_mode = c_int# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 262

KERNEL_MODE = 0# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 262

USER_MODE = (KERNEL_MODE + 1)# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 262

MAXIMUM_MODE = (USER_MODE + 1)# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 262

privilege_mode_t = enum_privilege_mode# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 262

enum_object_manager_object = c_int# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 269

OBJ_MANAGER_PROCESS_OBJECT = 7# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 269

OBJ_MANAGER_THREAD_OBJECT = 8# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 269

object_manager_object_t = enum_object_manager_object# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 269

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 273
if _libs["repl"].has("drakvuf_lock_and_get_vmi", "cdecl"):
    drakvuf_lock_and_get_vmi = _libs["repl"].get("drakvuf_lock_and_get_vmi", "cdecl")
    drakvuf_lock_and_get_vmi.argtypes = [drakvuf_t]
    drakvuf_lock_and_get_vmi.restype = vmi_instance_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 274
if _libs["repl"].has("drakvuf_release_vmi", "cdecl"):
    drakvuf_release_vmi = _libs["repl"].get("drakvuf_release_vmi", "cdecl")
    drakvuf_release_vmi.argtypes = [drakvuf_t]
    drakvuf_release_vmi.restype = None

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 288
class struct_symbol(Structure):
    pass

struct_symbol.__slots__ = [
    'name',
    'rva',
    'type',
    'inputs',
]
struct_symbol._fields_ = [
    ('name', String),
    ('rva', addr_t),
    ('type', c_uint8),
    ('inputs', c_int),
]

symbol_t = struct_symbol# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 288

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 295
class struct_symbols(Structure):
    pass

struct_symbols.__slots__ = [
    'name',
    'symbols',
    'count',
]
struct_symbols._fields_ = [
    ('name', String),
    ('symbols', POINTER(symbol_t)),
    ('count', c_uint64),
]

symbols_t = struct_symbols# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 295

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 297
if _libs["repl"].has("drakvuf_get_json_wow_path", "cdecl"):
    drakvuf_get_json_wow_path = _libs["repl"].get("drakvuf_get_json_wow_path", "cdecl")
    drakvuf_get_json_wow_path.argtypes = [drakvuf_t]
    drakvuf_get_json_wow_path.restype = c_char_p

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 298
if _libs["repl"].has("drakvuf_get_json_wow", "cdecl"):
    drakvuf_get_json_wow = _libs["repl"].get("drakvuf_get_json_wow", "cdecl")
    drakvuf_get_json_wow.argtypes = [drakvuf_t]
    drakvuf_get_json_wow.restype = POINTER(json_object)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 300
if _libs["repl"].has("json_get_symbols", "cdecl"):
    json_get_symbols = _libs["repl"].get("json_get_symbols", "cdecl")
    json_get_symbols.argtypes = [POINTER(json_object)]
    json_get_symbols.restype = POINTER(symbols_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 301
if _libs["repl"].has("drakvuf_free_symbols", "cdecl"):
    drakvuf_free_symbols = _libs["repl"].get("drakvuf_free_symbols", "cdecl")
    drakvuf_free_symbols.argtypes = [POINTER(symbols_t)]
    drakvuf_free_symbols.restype = None

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 303
if _libs["repl"].has("drakvuf_get_kernel_symbol_rva", "cdecl"):
    drakvuf_get_kernel_symbol_rva = _libs["repl"].get("drakvuf_get_kernel_symbol_rva", "cdecl")
    drakvuf_get_kernel_symbol_rva.argtypes = [drakvuf_t, String, POINTER(addr_t)]
    drakvuf_get_kernel_symbol_rva.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 306
if _libs["repl"].has("drakvuf_get_kernel_struct_size", "cdecl"):
    drakvuf_get_kernel_struct_size = _libs["repl"].get("drakvuf_get_kernel_struct_size", "cdecl")
    drakvuf_get_kernel_struct_size.argtypes = [drakvuf_t, String, POINTER(c_size_t)]
    drakvuf_get_kernel_struct_size.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 309
if _libs["repl"].has("drakvuf_get_kernel_struct_member_rva", "cdecl"):
    drakvuf_get_kernel_struct_member_rva = _libs["repl"].get("drakvuf_get_kernel_struct_member_rva", "cdecl")
    drakvuf_get_kernel_struct_member_rva.argtypes = [drakvuf_t, String, String, POINTER(addr_t)]
    drakvuf_get_kernel_struct_member_rva.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 313
if _libs["repl"].has("drakvuf_get_bitfield_offset_and_size", "cdecl"):
    drakvuf_get_bitfield_offset_and_size = _libs["repl"].get("drakvuf_get_bitfield_offset_and_size", "cdecl")
    drakvuf_get_bitfield_offset_and_size.argtypes = [drakvuf_t, String, String, POINTER(addr_t), POINTER(c_size_t), POINTER(c_size_t)]
    drakvuf_get_bitfield_offset_and_size.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 319
if _libs["repl"].has("json_get_symbol_rva", "cdecl"):
    json_get_symbol_rva = _libs["repl"].get("json_get_symbol_rva", "cdecl")
    json_get_symbol_rva.argtypes = [drakvuf_t, POINTER(json_object), String, POINTER(addr_t)]
    json_get_symbol_rva.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 323
if _libs["repl"].has("json_get_struct_size", "cdecl"):
    json_get_struct_size = _libs["repl"].get("json_get_struct_size", "cdecl")
    json_get_struct_size.argtypes = [drakvuf_t, POINTER(json_object), String, POINTER(c_size_t)]
    json_get_struct_size.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 327
if _libs["repl"].has("json_get_struct_member_rva", "cdecl"):
    json_get_struct_member_rva = _libs["repl"].get("json_get_struct_member_rva", "cdecl")
    json_get_struct_member_rva.argtypes = [drakvuf_t, POINTER(json_object), String, String, POINTER(addr_t)]
    json_get_struct_member_rva.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 333
if _libs["repl"].has("json_get_struct_members_array_rva", "cdecl"):
    json_get_struct_members_array_rva = _libs["repl"].get("json_get_struct_members_array_rva", "cdecl")
    json_get_struct_members_array_rva.argtypes = [drakvuf_t, POINTER(json_object), POINTER(POINTER(c_char) * int(2)), addr_t, POINTER(addr_t)]
    json_get_struct_members_array_rva.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 346
for _lib in _libs.values():
    try:
        vmi = (vmi_instance_t).in_dll(_lib, "vmi")
        break
    except:
        pass

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 347
for _lib in _libs.values():
    try:
        ret = (c_bool).in_dll(_lib, "ret")
        break
    except:
        pass

drakvuf_trap_free_t = CFUNCTYPE(UNCHECKED(None), POINTER(drakvuf_trap_t))# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 354

event_cb_t = CFUNCTYPE(UNCHECKED(None), c_int, POINTER(None))# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 356

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 358
if _libs["repl"].has("drakvuf_init", "cdecl"):
    drakvuf_init = _libs["repl"].get("drakvuf_init", "cdecl")
    drakvuf_init.argtypes = [POINTER(drakvuf_t), String, String, String, c_bool, c_bool, addr_t, c_bool]
    drakvuf_init.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 366
if _libs["repl"].has("drakvuf_close", "cdecl"):
    drakvuf_close = _libs["repl"].get("drakvuf_close", "cdecl")
    drakvuf_close.argtypes = [drakvuf_t, c_bool]
    drakvuf_close.restype = None

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 367
if _libs["repl"].has("drakvuf_add_trap", "cdecl"):
    drakvuf_add_trap = _libs["repl"].get("drakvuf_add_trap", "cdecl")
    drakvuf_add_trap.argtypes = [drakvuf_t, POINTER(drakvuf_trap_t)]
    drakvuf_add_trap.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 369
if _libs["repl"].has("drakvuf_remove_trap", "cdecl"):
    drakvuf_remove_trap = _libs["repl"].get("drakvuf_remove_trap", "cdecl")
    drakvuf_remove_trap.argtypes = [drakvuf_t, POINTER(drakvuf_trap_t), drakvuf_trap_free_t]
    drakvuf_remove_trap.restype = None

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 372
if _libs["repl"].has("drakvuf_loop", "cdecl"):
    drakvuf_loop = _libs["repl"].get("drakvuf_loop", "cdecl")
    drakvuf_loop.argtypes = [drakvuf_t]
    drakvuf_loop.restype = None

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 373
if _libs["repl"].has("drakvuf_interrupt", "cdecl"):
    drakvuf_interrupt = _libs["repl"].get("drakvuf_interrupt", "cdecl")
    drakvuf_interrupt.argtypes = [drakvuf_t, c_int]
    drakvuf_interrupt.restype = None

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 375
if _libs["repl"].has("drakvuf_is_interrupted", "cdecl"):
    drakvuf_is_interrupted = _libs["repl"].get("drakvuf_is_interrupted", "cdecl")
    drakvuf_is_interrupted.argtypes = [drakvuf_t]
    drakvuf_is_interrupted.restype = c_int

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 376
if _libs["repl"].has("drakvuf_pause", "cdecl"):
    drakvuf_pause = _libs["repl"].get("drakvuf_pause", "cdecl")
    drakvuf_pause.argtypes = [drakvuf_t]
    drakvuf_pause.restype = None

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 377
if _libs["repl"].has("drakvuf_resume", "cdecl"):
    drakvuf_resume = _libs["repl"].get("drakvuf_resume", "cdecl")
    drakvuf_resume.argtypes = [drakvuf_t]
    drakvuf_resume.restype = None
